# meso-prepare-transfer

./: .gitignore  README.md  build.py  config.yml  config_defaults.yaml  pyproject.toml
.github/workflows/: build_and_publish_release.yml  tag_and_publish.yml  test_and_lint.yml
doc_template/source/: conf.py
src/aind_mesoscope_user_schema_ui/: __init__.py  config.py  logging_config.py  main.py  user_settings_ui.py
src/aind_mesoscope_user_schema_ui/models/: config.py
src/aind_mesoscope_user_schema_ui/ui/: form.ui  ui_form.py
src/aind_mesoscope_user_schema_ui/utils/: logging_config.py  source_config.py
src/meso_prepare_transfer/: __init__.py  business_logic.py  config.py  data_schema.py  main.py
src/meso_prepare_transfer/utils/: logging_config.py  source_config.py
tests/: __init__.py  dummy_data.py  test_example.py  test_prepare_transfer.py
tests/resources/: user_settings.json
