[project]
name = "meso-prepare-transfer"
version = "1.0.0.dev0"
description = "Adapter to prepare mesoscope session data for transfer to aind-data-transfer-service"
readme = "README.md"
authors = [
    { name = "Patrick Latimer", email = "patrick.latimer@alleninstitute.org" }
]
requires-python = ">=3.12"

dependencies = [
    'PySide6==6.6.3',
    'aind-data-schema==1.2.0',
    'aind-data-schema-models==0.7.5',
    'aind-data-transfer-models==0.5.5',
    "aind-metadata-mapper[mesoscope]==0.29.3",
    'requests',
    'pyyaml',
    'pyinstaller',
    'h5py',
    'scipy',
    'numpy==1.26.4',
    "platformdirs>=4.3.8",
    "aind-watchdog-service>=0.1.6.dev2",
    "loguru>=0.7.3",
    "cyclopts>=4.4.1",
]

[project.scripts]
meso-prepare-transfer = "meso_prepare_transfer.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.ruff]
line-length = 120
